syntax = "proto3";

option java_multiple_files = true;
option java_package = "arch.attanake.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc GetProducts (ProductListRequest) returns (stream ProductResponse);
}

message ProductRequest {
  string product_id = 1;
}

message ProductListRequest {
  repeated string ids = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  bool available = 4;
}